[package]
name = "MarathonRust"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.valence]
git = "https://github.com/emortaldev/valence"

[dependencies]
aes = "0.7.5"
anyhow = "1.0.65"
approx = "0.5.1"
arrayvec = "0.7.2"
async-trait = "0.1.57"
base64 = "0.13.0"
bitfield-struct = "0.1.7"
bitvec = "1.0.1"
byteorder = "1.4.3"
bytes = "1.2.1"
cfb8 = "0.7.1"
flate2 = "1.0.24"
flume = "0.10.14"
futures = "0.3.24"
hmac = "0.12.1"
log = "0.4.17"
num = "0.4.0"
paste = "1.0.9"
rand = "0.8.5"
rayon = "1.5.3"
rsa = "0.6.1"
rsa-der = "0.3.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sha1 = "0.10.5"
sha2 = "0.10.6"
thiserror = "1.0.35"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde"] }
valence_nbt = "0.4.0"
vek = "0.15.8"

env_logger = "0.9.1"